Bug 878436 - Update Lion Fullscreen window styling offsets to avoid themes shifting position. r=timdream
Based on investigation by Nils Maier [:nmaier].

UltraBlame original commit: d97d25f58092b8cc7719b4363e08bd687c4e72a7

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -23146,24 +23146,14 @@ toolbar
 ;
 height
 :
-calc
-(
 tabHeight
-+
-1px
-)
 ;
 margin
 -
 bottom
 :
-calc
-(
--
-1px
 -
 tabHeight
-)
 ;
 visibility
 :
@@ -32292,13 +32282,68 @@ lwtheme
 :
 before
 {
+/
+*
+Adjust
+by
+the
+full
+element
+height
+of
+#
+titlebar
+since
+that
+element
+is
+*
+not
+displayed
+in
+native
+full
+-
+screen
+.
+*
+Also
+add
+the
+height
+of
+the
+tabs
+since
+we
+'
+re
+calculating
+the
+*
+total
+height
+of
+this
+pseudo
+-
+element
+not
+just
+the
+top
+-
+padding
+.
+*
+/
 height
 :
 calc
 (
 tabHeight
 +
-11px
+spaceAboveTabbar
 )
 !
 important
@@ -32331,21 +32376,27 @@ lwtheme
 {
 /
 *
-This
-additional
-padding
-matches
+Adjust
+by
 the
-change
-in
-height
-in
-the
-pseudo
--
+full
 element
+height
+of
+#
+titlebar
+since
+that
+element
+is
 *
-above
+not
+displayed
+in
+native
+full
+-
+screen
 .
 *
 /
@@ -32353,76 +32404,7 @@ padding
 -
 top
 :
-11px
-;
-}
-#
-main
--
-window
-[
-inFullscreen
-]
-:
-not
-(
-[
-privatebrowsingmode
-=
-temporary
-]
-)
-:
--
-moz
--
-lwtheme
-{
-/
-*
-In
-combination
-with
-the
-previous
-rule
-forces
-the
-top
-22px
-of
-the
-*
-background
-image
-to
-be
-hidden
-so
-the
-image
-doesn
-'
-t
-jump
-around
-with
-*
-the
-loss
-of
-the
-titlebar
-.
-*
-/
-background
--
-position
-:
-right
--
-11px
+spaceAboveTabbar
 ;
 }
 }
